añade parte del código del homepage con estilos

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,14 @@
-<h1>Home page</h1>
+<style>
+ 
+
+</style>
+
+<div class="home-container">
+    <div class="home-message">Are you ready to save your planet?</div>
+    <div>
+        <img src="../images/ufo.gif" alt="UFO" class="spaceship-home"></img>
+    </div>
+    <div>
+        <img src="../images/earth.png" alt="Earth" class="planet-home"></img>
+    </div>
+</div>
