--- a/index.html
+++ b/index.html
@@ -39,12 +39,41 @@
         text-align: center;
         animation: fadeIn 0.5s ease-in-out;
       }
-      #container {
-        flex-grow: 1;
-        padding: 2rem;
-        text-align: center;
-        animation: fadeIn 0.5s ease-in-out;
-      }
+
+         .home-message {
+    font-size: 2rem;
+    font-weight: 900;
+    text-align: center;
+    color: #ff0000; /* rojo intenso */
+    text-shadow: 
+      0 0 5px #ff0000, 
+      0 0 10px #990000, 
+      0 0 15px #550000,
+      0 0 20px black; /* sombras tenebrosas */
+    font-family: 'Orbitron', 'Arial Black', sans-serif;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+    animation: flicker 1.5s infinite alternate;
+  }
+
+  .home-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 40px;
+    }
+
+    .spaceship-home {
+      width: 400px;
+      position: relative;
+      border-radius: 40%;
+    }
+
+    .planet-home {
+      width: 200px;
+    }
+
       @keyframes fadeIn {
         from {
           opacity: 0;
@@ -148,7 +177,16 @@
         </div>
       </nav>
     </header>
-    <div id="container" class="mt-5 pt-4">Loading...</div>
+    <div id="container" class="mt-5 pt-4">
+      <div class="home-container">
+    <div class="home-message">Are you ready to save your planet?</div>
+    <div>
+        <img src="../images/ufo.gif" alt="UFO" class="spaceship-home"></img>
+    </div>
+    <div>
+        <img src="../images/earth.png" alt="Earth" class="planet-home"></img>
+    </div>
+</div></div>
   </body>
   <script src="./js/main.js"></script>
   <script src="./js/records.js"></script>
